Assignment2/vpc.tf
#########################################
# Custom VPC
#########################################

resource "aws_vpc" "assignment_vpc" {

  cidr_block = "10.0.0.0/16"

  enable_dns_support = true

  enable_dns_hostnames = true

  tags = {
    Name = "Assignment2-VPC"
  }

}
